--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     text-decoration: none;
     scroll-behavior: smooth;
-    font-family: "Fantasy";
+    font-family: 'Poppins' sans-serif;
 }
 :root {
     --bg-color: #080808;
@@ -129,7 +129,7 @@ section{
                 0 0 50px var(--main-color),
                 0 0 100px var(--main-color);
 }
-.social-icon a{
+.social-icons a{
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -140,10 +140,137 @@ section{
     border-radius: 50%;
     margin: 3rem 0.5rem;
     transition: 0.3s ease-in-out;
+    color: var(--main-color);
 }
-.social-icon a:hover{
+.social-icons a:hover{
     color: var(--text-color);
     background-color: var(--main-color);
     transform: scale(1.2)translateY(-5px);
     box-shadow: 0 0 25px var(--main-color);
+}
+.btn-group{
+    display:flex;
+    gap: 1.5rem;
+}
+.btn{
+    display:inline-block;
+    padding:1rem 3rem;
+    background-color: var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
+    border-radius: 3rem;
+    font-size: 1.8rem;
+    color: black;
+    border: 2px solid transparent;
+    font-weight: 600;
+    transition: 0.3s ease-in-out;
+}
+.btn:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50 px var(--main-color);
+}
+.btn-group a:nth-of-type(2){
+    background-color: black;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    box-shadow: 0 0 25px transparent;
+}
+.btn-group a:nth-of-type(2):hover{
+    box-shadow: 0 0 25px var(--main-color);
+    background-color: var(--main-color);
+    color:black;
+}
+.about{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10rem;
+    background-color: var(--second-color);
+}
+.about-img img{
+    width: 32vw;
+    border: 50%;
+    border-radius: 50%;
+    box-shadow: 0 0 25px var(--main-color);
+    transition: 0.4s ease-in-out;
+}
+.about-img img:hover{
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color),
+                0 0 100px var(--main-color);
+}
+.about-content h2{
+    font-size: 7rem;
+    text-align: left;
+}
+.about-content p{
+    font-size: 1.5rem;
+}
+.about-content .btn{
+    margin: 3rem 0;
+}
+::-webkit-scrollbar{
+    width: 20px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--main-color);
+}
+::-webkit-scrollbar-track{
+   background-color: var(--bg-color);
+}
+.heading{
+    text-align:center;
+    font-size: 7rem;
+    margin: 5rem 0;
+}
+.skills{
+    background-color: var(--bg-color);
+    color: black;
+}
+.skills h2{
+    color: var(--text-color);
+}
+.skills-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    align-items: right;
+    gap: 2.5rem;
+}
+.skill-box{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--main-color);
+    height: 600px;
+    border-radius: 3rem;
+    cursor: pointer;
+    border: 5px solid transparent;
+    transition: 0.4s ease-in-out;
+}
+.skill-box:hover{
+    background-color: var(--second-color);
+    color: var(--main-color);
+    border: 5px solid var(--main-color);
+    transform: scale(1.03);
+}
+.skill-info{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem;
+}
+.skill-info h4{
+    font-size: 4rem;
+    margin: 2rem 0;
+    font-weight: 800;
+}
+.skill-info p{
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 1.7;
+}
+.skill-info i{
+    font-size: 8rem;
 }
