Fix: gradient is now different shades of blue

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ span{
     background: linear-gradient(
         270deg,
         #0b4bac 10%,
-        #ea0c0c 100%,
+        #00b7ff 100%,
         #0c65ea 50%
     );
     background-clip: text;
@@ -78,7 +78,7 @@ span{
     background: linear-gradient(
         270deg,
         #0b4bac 10%,
-        #ea0c0c 100%,
+        #00b7ff 100%,
         #0c65ea 50%
     );
     color:whitesmoke;
